# ozz-animation

./: .gitignore  CLib.zig  build.zig  build.zig.zon  build_framework.zig  build_glfw.zig  build_ozz.zig  build_samples.zig  meson.build
docs/: package-lock.json  sidebars.ts
docs/docs/: index.md  samples.md
samples/additive/: sample_additive.cc
samples/attach/: sample_attach.cc
samples/baked/: sample_baked.cc
samples/blend/: sample_blend.cc
samples/foot_ik/: sample_foot_ik.cc
samples/framework/: meson.build
samples/look_at/: sample_look_at.cc
samples/optimize/: sample_optimize.cc
samples/partial_blend/: sample_partial_blend.cc
samples/playback/: sample_playback.cc
samples/skinning/: sample_skinning.cc
samples/two_bone_ik/: sample_two_bone_ik.cc
samples/user_channel/: sample_user_channel.cc
